--- a/ProyectoIII/cliente_web/package.json
+++ b/ProyectoIII/cliente_web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cliente_web",
+  "name": "web_copy",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,26 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.29.1",
     "vue": "^3.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "vite": "^4.3.5"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": ["plugin:vue/vue3-essential", "eslint:recommended"],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {
-      "no-console": "off"
-    }
   }
 }
